[package]
name = "inari"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
toml = "0.5.7"
serde_derive = "1.0.117"
serde = "1.0.117"
rusqlite = "0.24.1"
rayon = "1.5"
reqwest = { version = "0.10.8", features = ["blocking", "socks"] }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rand = "0.7.3"